--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,13 @@ dependencies:
   riverpod_annotation: ^2.3.5
   skeletonizer: ^1.4.2
   go_router: ^14.2.7
-  cached_network_image: ^3.4.1
+  flutter_svg: ^2.0.10+1
   package_info_plus: ^8.0.2
   url_launcher: ^6.3.0
   share_plus: ^10.0.2
+  cached_network_image: ^3.4.1
   intl: ^0.19.0
-  flutter_svg: ^2.0.10+1
+  connectivity_plus: ^6.0.5
 
 dev_dependencies:
   flutter_test:
