--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   cached_network_image: ^3.4.1
   intl: ^0.19.0
   connectivity_plus: ^6.0.5
+  responsive_framework: ^1.5.1
 
 dev_dependencies:
   flutter_test:
